--- a/index.html
+++ b/index.html
@@ -73,29 +73,29 @@
       <div class="games-container container my-4 p-4">
         <h2 class="mb-4">Nuestro catalogo:</h2>
         <div class="row d-flex justify-content-around pb-4">
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-1-shooter.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">Modern Warfare</h5>
+                <h3 class="card-title fs-5">Modern Warfare</h3>
                 <p class="badge bg-danger">Shooter</p>
               </div>
               <p class="card-text">Sumergete en una narrativa increíblemente cruda, descarnada y provocativa que aporta una intensidad sin igual y arroja luz sobre la naturaleza cambiante de la guerra moderna.</p>
               <a href="#" class="btn btn-success">Ver mas</a>
             </div>
           </div>
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-2-shooter.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">Half Life</h5>
+                <h3 class="card-title fs-5">Half Life</h3>
                 <p class="badge bg-danger">Shooter</p>
               </div>
               <p class="card-text">El Dr Gordon Freeman no habla ni una sola palabra, pero tiene un infierno de historia para contarte, una historia revolucionaria que puede no ser todo lo que parece, contada no a través de las escenas, sino del entorno visual.</p>
               <a href="#" class="btn btn-success">Ver mas</a>
             </div>
           </div>
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-3-shooter.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -108,33 +108,33 @@
           </div>
         </div>
         <div class="row d-flex justify-content-around pb-4">
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-1-puzzle.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h3 class="card-title">Portal 2</h3>
+                <h3 class="card-title fs-5">Portal 2</h3>
                 <p class="badge bg-warning">Puzzle</p>
               </div>
               <p class="card-text">Chell, y su nuevo amigo robot, Wheatley, se enfrentan a más puzzles concebidos por GLaDOS, una I.A. con el único propósito de probar la Pistola de Portales y vengarse de Chell por los sucesos de Portal.</p>
               <a href="#" class="btn btn-success">Ver mas</a>
             </div>
           </div>
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-2-puzzle.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">The Turing Test</h5>
+                <h3 class="card-title fs-5">The Turing Test</h3>
                 <p class="badge bg-warning">Puzzle</p>
               </div>
               <p class="card-text">Explora los fenómenos de la conciencia y desafía el significado de la intuición humana. Toma el control de Ava Turing, una ingeniera de la ISA, y avanza a través de una historiade introspección y moralidad.</p>
               <a href="#" class="btn btn-success">Ver mas</a>
             </div>
           </div>
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-3-puzzle.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">Q.U.B.E. 2</h5>
+                <h3 class="card-title fs-5">Q.U.B.E. 2</h3>
                 <p class="badge bg-warning">Puzzle</p>
               </div>
               <p class="card-text">Una arqueóloga varada ha despertado entre las ruinas de un antiguo paisaje alienígena. Con la lejana ayuda de otro superviviente, debes manipular la estructura de este misterioso mundo y encontrar el camino de vuelta a casa.</p>
@@ -143,33 +143,33 @@
           </div>
         </div>
         <div class="row d-flex justify-content-around pb-4">
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-1-strategy.png" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">Age Of Empires IV</h5>
+                <h3 class="card-title fs-5">Age Of Empires IV</h3>
                 <p class="badge bg-info">Strategy</p>
               </div>
               <p class="card-text">Age of Empires IV te ofrece una experiencia de estrategia en tiempo real evolucionado a una nueva generación. Poniéndote en el centro de épicas batallas históricas que dieron forma al mundo.</p>
               <a href="#" class="btn btn-success">Ver mas</a>
             </div>
           </div>
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-2-strategy.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">Warhammer</h5>
+                <h3 class="card-title fs-5">Warhammer</h3>
                 <p class="badge bg-info">Strategy</p>
               </div>
               <p class="card-text">Se acerca un cataclismo. Reúne tus fuerzas y entra en el Reino del Caos, una dimensión de horror alucinante donde se decidirá el destino del mundo. ¿Conquistarás a tus Daemons o los comandarás?</p>
               <a href="#" class="btn btn-success">Ver mas</a>
             </div>
           </div>
-          <div class="col-3 card game-card px-0">
+          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
             <img src="/assets/images/games-store-main/game-3-strategy.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <h5 class="card-title">Frozenheim</h5>
+                <h3 class="card-title fs-5">Frozenheim</h3>
                 <p class="badge bg-info">Strategy</p>
               </div>
               <p class="card-text">Dirige a tu clan vikingo a través de las dificultades del norte helado, estación tras estación, año tras año. Construye y sobrevive. Zarpa, explora y conquista. Gana el favor de Odín y asegura tu lugar en el Valhalla.</p>
