--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div class="col-md-12 card border-0">
           <img src="./assets/images/games-store-main/cover.jpg" alt="" class="card-img">
           <div class="container-fluid card-img-overlay caption-back row gx-0">
-            <div class="col-6 ps-5 d-flex flex-column justify-content-end">
-              <h2 class="display-4">Half Life: Alyx</h2>
-              <p class="badge bg-danger fs-5 col-3">Disparos</p>
-              <p class="lead my-3">Half-Life: Alyx es el regreso de Valve a la serie Half-Life. Es la historia de una lucha imposible contra una despiadada raza alienígena conocida como el Combine, ambientada entre los acontecimientos de Half-Life y Half-Life 2.
+            <div class="col-8 ps-lg-5 d-flex flex-column justify-content-end">
+              <h2 class="display-5">Half Life: Alyx</h2>
+              <p class="badge bg-danger fs-6 w-25"><span class="d-none d-sm-block">Disparos</span> </p>
+              <p class="lead my-3 d-none d-lg-block ">Half-Life: Alyx es el regreso de Valve a la serie Half-Life. Es la historia de una lucha imposible contra una despiadada raza alienígena conocida como el Combine, ambientada entre los acontecimientos de Half-Life y Half-Life 2.
               Ambientado entre los acontecimientos de Half-Life y Half-Life 2, Alyx Vance y su padre Eli montan una resistencia temprana a la brutal ocupación de la Tierra por parte de los Combine.
             </p>
             </div>
@@ -73,7 +73,7 @@
       <div class="games-container container my-4 p-4">
         <h2 class="mb-4">Nuestro catalogo:</h2>
         <div class="row d-flex justify-content-around pb-4">
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-1-shooter.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -81,10 +81,14 @@
                 <p class="badge bg-danger">Shooter</p>
               </div>
               <p class="card-text">Sumergete en una narrativa increíblemente cruda, descarnada y provocativa que aporta una intensidad sin igual y arroja luz sobre la naturaleza cambiante de la guerra moderna.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+              
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-2-shooter.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -92,10 +96,13 @@
                 <p class="badge bg-danger">Shooter</p>
               </div>
               <p class="card-text">El Dr Gordon Freeman no habla ni una sola palabra, pero tiene un infierno de historia para contarte, una historia revolucionaria que puede no ser todo lo que parece, contada no a través de las escenas, sino del entorno visual.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-3-shooter.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -103,12 +110,15 @@
                 <p class="badge bg-danger">Shooter</p>
               </div>
               <p class="card-text">Inspirado en la realidad de los operativos antiterroristas, te invita a dominar el arte de la destrucción. Los intensos enfrentamientos, las tácticas en equipo, y la acción explosiva son el centro de la experiencia. </p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
         </div>
         <div class="row d-flex justify-content-around pb-4">
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-1-puzzle.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -116,10 +126,13 @@
                 <p class="badge bg-warning">Puzzle</p>
               </div>
               <p class="card-text">Chell, y su nuevo amigo robot, Wheatley, se enfrentan a más puzzles concebidos por GLaDOS, una I.A. con el único propósito de probar la Pistola de Portales y vengarse de Chell por los sucesos de Portal.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-2-puzzle.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -127,10 +140,13 @@
                 <p class="badge bg-warning">Puzzle</p>
               </div>
               <p class="card-text">Explora los fenómenos de la conciencia y desafía el significado de la intuición humana. Toma el control de Ava Turing, una ingeniera de la ISA, y avanza a través de una historiade introspección y moralidad.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-3-puzzle.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -138,12 +154,15 @@
                 <p class="badge bg-warning">Puzzle</p>
               </div>
               <p class="card-text">Una arqueóloga varada ha despertado entre las ruinas de un antiguo paisaje alienígena. Con la lejana ayuda de otro superviviente, debes manipular la estructura de este misterioso mundo y encontrar el camino de vuelta a casa.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
         </div>
         <div class="row d-flex justify-content-around pb-4">
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-1-strategy.png" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -151,10 +170,13 @@
                 <p class="badge bg-info">Strategy</p>
               </div>
               <p class="card-text">Age of Empires IV te ofrece una experiencia de estrategia en tiempo real evolucionado a una nueva generación. Poniéndote en el centro de épicas batallas históricas que dieron forma al mundo.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-2-strategy.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -162,10 +184,13 @@
                 <p class="badge bg-info">Strategy</p>
               </div>
               <p class="card-text">Se acerca un cataclismo. Reúne tus fuerzas y entra en el Reino del Caos, una dimensión de horror alucinante donde se decidirá el destino del mundo. ¿Conquistarás a tus Daemons o los comandarás?</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
-          <div class="col col-8 col-sm-4 col-md-6 col-lg-3 card game-card px-0 mx-md-2">
+          <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
             <img src="/assets/images/games-store-main/game-3-strategy.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <div class="d-flex justify-content-between">
@@ -173,7 +198,10 @@
                 <p class="badge bg-info">Strategy</p>
               </div>
               <p class="card-text">Dirige a tu clan vikingo a través de las dificultades del norte helado, estación tras estación, año tras año. Construye y sobrevive. Zarpa, explora y conquista. Gana el favor de Odín y asegura tu lugar en el Valhalla.</p>
-              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+              <p class="mb-0">PC, PS5</p>
+              <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
         </div>
@@ -184,17 +212,17 @@
           <p class="fs-5">En <span class="text-success fw-bold">Game Chiefs</span> somos conscientes de lo que busca todo fanatico de los videojuegos, por eso trabajamos constantemente en poder ofrecerte lo mejor.</p>
         </div>
         <div class="row d-flex justify-content-around pb-4 pt-5">
-          <div class="service-card col col-3 d-flex flex-column align-items-center">
+          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center">
             <img src="/assets/images/games-store-main/service-platform.png" alt="" class="img-fluid w-25 mb-3">
             <h3 class="text-center mb-3">Soporte</h3>
             <p>Apostamos por juegos en la mayoria de las plataformas, para que sin importar desde donde juegues, siempre puedas divertirte.</p>
           </div>
-          <div class="service-card  col col-3 d-flex flex-column align-items-center">
+          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center">
             <img src="/assets/images/games-store-main/service-genre.png" alt="" class="img-fluid w-25 mb-3">
             <h3 class="text-center mb-3">Variedad</h3>
             <p>Nuestro versatil catalogo tiene para ofrecerte todo tipo de juegos, esta garantizado que encontraras el ideal para ti.</p>
           </div>
-          <div class="service-card col col-3 d-flex flex-column align-items-center">
+          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center">
             <img src="/assets/images/games-store-main/service-buy.png" alt="" class="img-fluid w-25 mb-3">
             <h3 class="justy mb-3">Calidad</h3>
             <p>Elige un juego que te guste y compralo, asi de sencillo. Del resto siempre nos encargamos nosotros.</p>
