--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="./scripts/homeScripts.js" defer></script>
+    <script src="./scripts/general-scripts/logoutUser.js" defer></script>
     <link rel="stylesheet" href="../../styles/index-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Games Chief</title>
@@ -26,7 +27,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark py-0">
         <div class="container-fluid">
           <div class="d-flex border-end py-3">
-            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top">
+            <img src="../../assets/images/icons/game-chief-logo.svg" alt="page-logo" width="45" height="" class="d-inline-block align-text-top">
             <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
           </div>
           <button
@@ -43,13 +44,19 @@
           <div class="collapse navbar-collapse ps-2" id="navbarSupportedContent">
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/contact.html">Contacto</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/About us/about-us.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" href="#">Ingresar</a></li>
-              <li class="nav-item"><a class="nav-link text-success" href="#">Admin</a></li>
-              <li class="nav-item"><a class="nav-link text-danger" href="#">Salir</a></li>
+              <div id="admin-item">
+                <li class="nav-item"><a class="nav-link text-success" href="./pages/admin/admin-panel.html">Admin</a></li>
+              </div>
+              <div id="logout-item">
+                <li class="nav-item"><a href="./index.html" id="logout-link" class="nav-link text-danger" onclick="logoutUser()">Salir</a></li>
+              </div>
+              <div id="login-item">
+                <li class="nav-item"><a class="nav-link" href="./pages/login-register.html">Ingresar</a></li>
+              </div>
             </ul>
           </div>
         </div>
@@ -62,8 +69,11 @@
           <div class="container-fluid card-img-overlay caption-back row gx-0">
             <div class="col-8 ps-lg-5 d-flex flex-column justify-content-end">
               <h2 class="display-5">Half Life: Alyx</h2>
-              <p class="badge bg-danger fs-6 w-25"><span class="d-none d-sm-block">Disparos</span> </p>
-              <p class="lead my-3 d-none d-lg-block ">Half-Life: Alyx es el regreso de Valve a la serie Half-Life. Es la historia de una lucha imposible contra una despiadada raza alienígena conocida como el Combine, ambientada entre los acontecimientos de Half-Life y Half-Life 2.
+              <div>
+                <p class="badge bg-danger fs-6 w-25"><span class="d-none d-sm-block">Disparos</span></p>
+                <p class="badge bg-dark fs-6 w-25"><span class="d-none d-sm-block">VR</span></p>
+              </div>
+              <p class="lead my-3 d-none d-lg-block ">Half-Life: Alyx es el regreso de Valve a la serie Half-Life. Es la historia de una lucha imposible contra una despiadada raza alienígena conocida como los Combine.
               Ambientado entre los acontecimientos de Half-Life y Half-Life 2, Alyx Vance y su padre Eli montan una resistencia temprana a la brutal ocupación de la Tierra por parte de los Combine.
             </p>
             </div>
@@ -81,10 +91,9 @@
                 <p class="badge bg-danger">Shooter</p>
               </div>
               <p class="card-text">Sumergete en una narrativa increíblemente cruda, descarnada y provocativa que aporta una intensidad sin igual y arroja luz sobre la naturaleza cambiante de la guerra moderna.</p>
-              
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -98,7 +107,7 @@
               <p class="card-text">El Dr Gordon Freeman no habla ni una sola palabra, pero tiene un infierno de historia para contarte, una historia revolucionaria que puede no ser todo lo que parece, contada no a través de las escenas, sino del entorno visual.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -112,7 +121,7 @@
               <p class="card-text">Inspirado en la realidad de los operativos antiterroristas, te invita a dominar el arte de la destrucción. Los intensos enfrentamientos, las tácticas en equipo, y la acción explosiva son el centro de la experiencia. </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -128,7 +137,7 @@
               <p class="card-text">Chell, y su nuevo amigo robot, Wheatley, se enfrentan a más puzzles concebidos por GLaDOS, una I.A. con el único propósito de probar la Pistola de Portales y vengarse de Chell por los sucesos de Portal.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -142,7 +151,7 @@
               <p class="card-text">Explora los fenómenos de la conciencia y desafía el significado de la intuición humana. Toma el control de Ava Turing, una ingeniera de la ISA, y avanza a través de una historiade introspección y moralidad.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -156,7 +165,7 @@
               <p class="card-text">Una arqueóloga varada ha despertado entre las ruinas de un antiguo paisaje alienígena. Con la lejana ayuda de otro superviviente, debes manipular la estructura de este misterioso mundo y encontrar el camino de vuelta a casa.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -172,7 +181,7 @@
               <p class="card-text">Age of Empires IV te ofrece una experiencia de estrategia en tiempo real evolucionado a una nueva generación. Poniéndote en el centro de épicas batallas históricas que dieron forma al mundo.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -186,7 +195,7 @@
               <p class="card-text">Se acerca un cataclismo. Reúne tus fuerzas y entra en el Reino del Caos, una dimensión de horror alucinante donde se decidirá el destino del mundo. ¿Conquistarás a tus Daemons o los comandarás?</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
@@ -200,7 +209,7 @@
               <p class="card-text">Dirige a tu clan vikingo a través de las dificultades del norte helado, estación tras estación, año tras año. Construye y sobrevive. Zarpa, explora y conquista. Gana el favor de Odín y asegura tu lugar en el Valhalla.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-              <p class="mb-0">PC, PS5</p>
+              <p class="badge bg-dark mb-0">PC, PS5</p>
               <a href="#" class="btn btn-success float-end">Ver mas</a>
             </div>
           </div>
