--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -16,9 +16,9 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../scripts/admin/games-scripts.js" defer></script>
-    <script src="../../scripts/admin/users-scripts.js" defer></script>
+    <script type="module" src="../../scripts/admin/users-scripts.js" defer></script>
+    <script src="../../scripts/general-scripts/logoutUser.js" defer></script>
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Administracion</title>
@@ -43,15 +43,21 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse ps-2" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+            <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link" aria-current="page" href="../../index.html">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="../contact.html">Contacto</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" href="#">Ingresar</a></li>
-              <li class="nav-item active"><a class="nav-link text-success active" href="#">Admin</a></li>
-              <li class="nav-item"><a class="nav-link text-danger" href="#">Salir</a></li>
+              <div id="admin-item">
+                <li class="nav-item"><a class="nav-link active text-success" href="./admin-panel.html">Admin</a></li>
+              </div>
+              <div id="logout-item">
+                <li class="nav-item"><a href="../../index.html" id="logout-link" class="nav-link text-danger" onclick="logoutUser()">Salir</a></li>
+              </div>
+              <div id="login-item">
+                <li class="nav-item"><a class="nav-link" href="#">Ingresar</a></li>
+              </div>
             </ul>
           </div>
         </div>
