modify users repair

--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -17,7 +17,8 @@
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="../../scripts/admin/games-scripts.js" defer></script>
-    <script type="module" src="../../scripts/admin/users-scripts.js" defer></script>
+    <script src="../../scripts/admin/users-scripts.js" defer></script>
+    <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../../scripts/general-scripts/logoutUser.js" defer></script>
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
@@ -28,7 +29,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark py-0">
         <div class="container-fluid">
           <div class="d-flex border-end py-3">
-            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top">
+            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top" />
             <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
           </div>
           <button
